# Prompt-Repo-for-LLM

./: CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/reports/: 2026-03-v0.1.0-manual-benchmark.md
prompts/customer_support/classify_ticket/: failures.md  prompt.yaml  rubic.yaml  tests.jsonl
prompts/writing/email_reply/: failures.md  prompt.yaml  rubric.yaml  tests.jsonl
schemas/: classify_ticket.output.schema.json  email_reply.output.schema.json  run_result.schema.json
